tests/fail/no_default.rs
use serde_builder::SerdeBuilder;

#[derive(SerdeBuilder)]
struct MyStruct {
    x: bool
}

fn main() {}
